cros: do not clear kPreMinimizedShowStateKey in tablet mode

changes:
Do not clear kPreMinimizedShowStateKey in tablet mode, instead let it
persist before/after tablet mode.

Bug: 823175, 783310
Test: manual test and added test coverage.
Change-Id: Icec1675da9c7d1b5b955ae5c05a71d96547afeee
Reviewed-on: https://chromium-review.googlesource.com/969455
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Qiang Xu <warx@google.com>
Cr-Commit-Position: refs/heads/master@{#544789}
Former-commit-id: 526cc33b6e631f8b02daac102a91111462143914